# SoftRenderer

./: .gitignore  CMakeLists.txt  Math.h  MathTest.cpp  Rasterizer.h  RenderTarget.h  RenderTargetTest.cpp  Transform.h  TransformTest.cpp  main.cpp
